--- a/examples/jay-stack/fake-shop/index.html
+++ b/examples/jay-stack/fake-shop/index.html
@@ -10,10 +10,14 @@
     <div id="target"></div>
     <script type="module">
       import {makeJayComponent} from 'jay-component';
+      import {makeCompositeJayComponent} from "jay-stack-runtime";
       <!--app-script-->
 
       const target = document.getElementById('target');
-      const pageComp = makeJayComponent(page.render, page.comp);
+      const pageComp = makeCompositeJayComponent(page.render, viewState, [
+        {comp: page.comp, contextMarkers: [], viewStateKey: 'a'}
+      ])
+      // const pageComp = makeJayComponent(page.render, page.comp);
 
       const instance = pageComp({...viewState, ...carryForward})
       target.appendChild(instance.element.dom);
