split the stack-runtime package into 3 packages for different environments

--- a/examples/jay-stack/fake-shop/index.html
+++ b/examples/jay-stack/fake-shop/index.html
@@ -9,7 +9,7 @@
     <div id="target"></div>
     <script type="module">
       import {makeJayComponent} from 'jay-component';
-      import {makeCompositeJayComponent} from "jay-stack-runtime";
+      import {makeCompositeJayComponent} from "jay-stack-client-runtime";
       <!--app-script-->
 
       const target = document.getElementById('target');
