developed design log 90 - nested headless components without slow phase under interactive foreach

--- a/examples/jay/cart-webmcp/index.html
+++ b/examples/jay/cart-webmcp/index.html
@@ -22,15 +22,23 @@
         border: 1px solid #a5d6a7;
         color: #2e7d32;
       }
-      .status-supported a { color: #1b5e20; }
+      .status-supported a {
+        color: #1b5e20;
+      }
       .status-unsupported {
         background: #fbe9e7;
         border: 1px solid #ef9a9a;
         color: #c62828;
       }
-      .status-unsupported a { color: #b71c1c; }
-      #webmcp-status p { margin: 4px 0; }
-      #webmcp-status p:first-child { margin-bottom: 8px; }
+      .status-unsupported a {
+        color: #b71c1c;
+      }
+      #webmcp-status p {
+        margin: 4px 0;
+      }
+      #webmcp-status p:first-child {
+        margin-bottom: 8px;
+      }
     </style>
   </head>
   <body>
